# machine-learining-in-production

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.xml  main.py  pod.yml  pyproject.toml
.github/actions/assume-role/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml  docker-deploy.yaml
machine_learning/: machine_learning_builder.py  main.py
src/mlip/: __init__.py
tests/: test_machine_learning_builder.py  test_main.py
